# kbsqpc

./: .gitignore  App.css  App.js  Cargo.toml  clear.bat  config-overrides.js  package-lock.json  package.json  setupProxy.js
config/: routes_school.js
pages/other/: overview.js
pages/other/js/: chart.js
pkg/: package.json  yew_app.d.ts  yew_app.js  yew_app_bg.d.ts  yew_app_bg.js  yew_app_bg.wasm
pkg/snippets/yew-app-47f3a7526da33f5e/: inline11.js  inline14.js  inline17.js  inline18.js  inline19.js  inline20.js  inline24.js  inline25.js  inline26.js  inline27.js  inline4.js  inline5.js  inline7.js  inline8.js
pkg/snippets/yew-app-80897f402006c7b2/: inline11.js  inline12.js  inline14.js  inline16.js  inline17.js  inline2.js  inline5.js  inline7.js  inline9.js
public/: index.html  update.json
src/: App.css  App.js  index.css  lib.rs  proxy.properties
src/common/: base.js  login.js  method.js  methodTs.ts
src/common/comlibs/: btnloading.tsx  checks.tsx  createForm.js  drawerRight.js  drawerTop.js  dropdown.js  img.js  inputs.js  modals.js  num.js  rangePicker.js  tableEdit.js  tablePagination.js  tablePagination.js.rej  unlimitedfalls.js  unlimitedload.js  upload.js  uploadaudio.js  uploadfile.js  uploadimg.js  uploadimgs.js  uploadvideo.js  video.js  voice.js
src/common/plugins/: editor.js  imgDraw.css  imgDraw.js  pickerMap.js
src/common/style/: afresh.css  antamend.css  basic.css  custom.css  login.css
src/config/: routes_adminPc.js  routes_teacherPc.js
src/pages/: comlibs.js  plugins.js  wasm.js  works.js  yew.js
src/rust/: chat.rs  mod.rs
(+188 files in other folders)
