[package]
authors = ["yew-app"]
categories = ["wasm"]
description = "Yew app."
edition = "2018"
license = "Apache-2.0/MIT"
name = "yew-app"
readme = "./README.md"
repository = "https://git@github.com:yewstack/yew.git"
version = "0.14.3"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.8"
web_logger = "0.2"
serde_derive = "1"
anyhow = "1"
yew = { version="0.14.3", features = ["std_web"] }
yew-router = { version="0.11.0", features = ["std_web"] }
wasm-bindgen = { version = "0.2.62", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.12"
js-sys = "0.3.39"
serde = "1.0.110"
serde_json = "1.0.53"
serde_urlencoded = "0.6.1"
wee_alloc = "0.4.5"
stdweb = "0.4.20"

[dev-dependencies]
wasm-bindgen-test = "0.3.12"